<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:padding="@dimen/padding_default">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/content_sn"
            android:textColor="@color/colorSecondBody"
            android:textSize="@dimen/sizeBody" />

        <TextView
            android:id="@+id/title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_default"
            android:textColor="@color/colorBody"
            android:textSize="@dimen/sizeBody" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/content_version"
            android:textColor="@color/colorSecondBody"
            android:textSize="@dimen/sizeBody" />

        <TextView
            android:id="@+id/title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_default"
            android:textColor="@color/colorBody"
            android:textSize="@dimen/sizeBody" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/content_model"
            android:textColor="@color/colorSecondBody"
            android:textSize="@dimen/sizeBody" />

        <TextView
            android:id="@+id/title3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_default"
            android:textColor="@color/colorBody"
            android:textSize="@dimen/sizeBody" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/content_product"
            android:textColor="@color/colorSecondBody"
            android:textSize="@dimen/sizeBody" />

        <TextView
            android:id="@+id/title4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_default"
            android:text=""
            android:textColor="@color/colorBody"
            android:textSize="@dimen/sizeBody" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:visibility="gone"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="电池"
            android:textColor="@color/colorSecondBody"
            android:textSize="@dimen/sizeBody" />

        <TextView
            android:id="@+id/title5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_default"
            android:textColor="@color/colorBody"
            android:textSize="@dimen/sizeBody" />
    </LinearLayout>
</LinearLayout>