<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDefaultBg"
    android:orientation="vertical">

    <include layout="@layout/widget_tool_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bg_corrent_2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|right"
            android:paddingRight="16dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:background="@drawable/bg_white"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/content_temp"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sizeTitle" />

                <TextView
                    android:id="@+id/temperature"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="--"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sizeTitle"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_white"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/content_sfhd"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sizeTitle" />

                <TextView
                    android:id="@+id/activeness"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="--"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sizeTitle"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_white"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/content_hs"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sizeTitle" />

                <TextView
                    android:id="@+id/alreadyRunning"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="--"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sizeTitle"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/btnStartMeasure"
                    android:layout_width="120dp"
                    android:layout_height="48dp"
                    android:background="@drawable/bg_white1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/content_start_correct"
                        android:textColor="@color/colorBtnUnPress"
                        android:textSize="@dimen/sizeTitle" />
                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <LinearLayout
                    android:id="@+id/btnStopMeasure"
                    android:layout_width="120dp"
                    android:layout_height="48dp"
                    android:alpha="0.32"
                    android:background="@drawable/bg_white1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/content_stop_correct"
                        android:textColor="@color/colorBtnUnPress"
                        android:textSize="@dimen/sizeTitle" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:orientation="vertical"
            android:paddingLeft="16dp">

            <RelativeLayout
                android:id="@+id/parent_chart"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="gone" />

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="--"
                android:textColor="@color/navBarTitleColor"
                android:textSize="@dimen/sizeTitle"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:background="@drawable/bg_white"
                android:gravity="left|center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding_default"
                android:paddingRight="@dimen/padding_default">


                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@mipmap/icons_info1" />

                <TextView
                    android:id="@+id/mesasureName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding_default"
                    android:layout_weight="1"
                    android:focusableInTouchMode="true"
                    android:gravity="center|left"
                    android:singleLine="true"
                    android:text="请放置氯化钠饱和液"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sizeSubTitle"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingRight="@dimen/padding_default"
                android:paddingLeft="@dimen/padding_default">

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/spinner_bg"
                    android:entries="@array/correct_model" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingRight="@dimen/padding_default"
                android:paddingLeft="@dimen/padding_default"
                >

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/spinner_bg"
                    android:entries="@array/correct_time_array" />


            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>